added DriverRequest/Response and ConstructorRequest/Response

--- a/ErgastTest/ConsoleApp1/ErgastConsoleApp.csproj
+++ b/ErgastTest/ConsoleApp1/ErgastConsoleApp.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ErgastTest\ErgastTest.csproj" />
+    <ProjectReference Include="..\ErgastTest\ErgastApiHandler.csproj" />
   </ItemGroup>
 
 </Project>
