--- a/ErgastTest/Ergast-UnitTests/Ergast-UnitTests.csproj
+++ b/ErgastTest/Ergast-UnitTests/Ergast-UnitTests.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ErgastTest\ErgastTest.csproj" />
+    <ProjectReference Include="..\ErgastTest\ErgastApiHandler.csproj" />
   </ItemGroup>
 
 </Project>
