--- a/ErgastTest/ErgastApiHandler/ErgastApiHandler.csproj
+++ b/ErgastTest/ErgastApiHandler/ErgastApiHandler.csproj
@@ -4,10 +4,15 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Casting\" />
   </ItemGroup>
 
 </Project>
